--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-basic-datepicker",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "A barebones, no-frills datepicker from React",
   "scripts": {
     "lint": "eslint src",
@@ -37,7 +37,9 @@
     "webpack-dev-server": "1.14.1"
   },
   "dependencies": {
-    "date-fns": "^1.13.0",
+    "date-fns": "^1.13.0"
+  },
+  "peerDependencies": {
     "react": "^15.5.3",
     "react-dom": "^15.5.3"
   },
