--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "A barebones, no-frills datepicker from React",
   "scripts": {
     "lint": "eslint src",
-    "start": "node server.js",
+    "start": "webpack-dev-server --open --hot",
     "prepublish": "./node_modules/.bin/babel -d lib src/",
-    "test": "./node_modules/.bin/jest"
+    "test": "./node_modules/.bin/jest",
+    "build": "webpack"
   },
   "repository": "https://github.com/chrisborrowdale/react-basic-datepicker",
   "keywords": [
@@ -19,22 +20,24 @@
   "homepage": "",
   "devDependencies": {
     "babel-cli": "^6.18.0",
-    "babel-core": "6.10.4",
-    "babel-loader": "6.0.1",
-    "babel-preset-es2015": "6.9.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "6.5.0",
+    "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^2.6.0",
-    "eslint": "^3.12.2",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint": "^4.6.1",
+    "eslint-config-airbnb": "^15.1.0",
     "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^3.0.2",
-    "eslint-plugin-react": "^6.8.0",
-    "jest": "^19.0.2",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "jest": "^21.0.0",
     "react-addons-test-utils": "^15.5.1",
     "react-test-renderer": "^15.5.4",
-    "webpack": "1.13.1",
-    "webpack-dev-server": "1.14.1"
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1",
+    "react": "^15.5.3",
+    "react-dom": "^15.5.3"
   },
   "dependencies": {
     "date-fns": "^1.13.0"
