--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "react-basic-datepicker",
-  "version": "1.1.1",
+  "version": "1.1.2",
   "description": "A barebones, no-frills datepicker from React",
   "scripts": {
     "lint": "eslint src",
     "start": "webpack-dev-server --open --hot",
-    "prepublish": "./node_modules/.bin/babel -d lib src/",
+    "prepublish": "babel src --out-dir lib --ignore __tests__",
     "test": "./node_modules/.bin/jest",
-    "build": "webpack"
+    "build": "webpack -p"
   },
   "repository": "https://github.com/chrisborrowdale/react-basic-datepicker",
   "keywords": [
@@ -24,7 +24,6 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-0": "^6.24.1",
     "enzyme": "^2.6.0",
     "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
@@ -32,12 +31,11 @@
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
     "jest": "^21.0.0",
-    "react-addons-test-utils": "^15.5.1",
-    "react-test-renderer": "^15.5.4",
-    "webpack": "^3.5.5",
-    "webpack-dev-server": "^2.7.1",
     "react": "^15.5.3",
-    "react-dom": "^15.5.3"
+    "react-dom": "^15.5.3",
+    "react-test-renderer": "^15.6.1",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1"
   },
   "dependencies": {
     "date-fns": "^1.13.0"
