--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "react-basic-datepicker",
-  "version": "1.1.2",
-  "description": "A barebones, no-frills datepicker from React",
+  "version": "1.1.3",
+  "description": "A barebones, no-frills datepicker for React",
   "scripts": {
     "lint": "eslint src",
     "start": "webpack-dev-server --open --hot",
